--- a/attendance-system/client/src/Components/Login/Login.css
+++ b/attendance-system/client/src/Components/Login/Login.css
@@ -81,4 +81,12 @@ body, html {
     margin-right: 0.5em;
 }
 
+.error{
+    color: red;
+    margin-left: 0;
+    text-align: left;
+    margin-top: -1rem;
+    font-size: 14px;
+}
+
   
